<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameResult">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/game_over"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt_who_wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semi_bold"
            android:text="@string/draw"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_blue_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/blue_0"
                android:textColor="@color/blue_game_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_red_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/red_0"
                android:textColor="@color/red_game_color"
                android:textSize="25sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next_match"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_backgroud"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/next_match"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

</FrameLayout>