<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StartGameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/select_matches"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/rg_matches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checkedButton="@id/rb_match_3"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_match_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/_3"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_match_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_match_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/_7"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/starting_color"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/rg_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checkedButton="@id/rb_color_blue"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_color_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/blue"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_color_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/red"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semi_bold"
                android:text="@string/game_time_limit"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/rg_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checkedButton="@id/rb_timer_15"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_timer_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/_1_m"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_timer_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/_2_m"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rb_timer_45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/_5_m"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </RadioGroup>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_backgroud"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

</FrameLayout>